# telegram-opencode-proxy

./: .gitignore  Cargo.toml  README.md  config.example.toml  dev.sh  test-fullstack.sh
.github/workflows/: ci.yml
deploy/examples/family/: .env.example  .gitignore  DEPLOY.md  compose.yaml
deploy/examples/family/dockge/: compose.yaml
deploy/examples/family/launchd/: net.theuseless.colima.plist
deploy/examples/family/opencode/: Dockerfile
deploy/examples/family/opencode-config/: alice.opencode.json  bob.opencode.json
deploy/examples/family/proxy/: Dockerfile
docs/design/: architecture.md  execution-plan.md
docs/meeting_minutes/: 2026-07-11-architecture-brainstorm.md
examples/: mock_model.rs
fixtures/opencode/: README.md  config-providers.json  doc.json  message-response.json  patch-permission.json  pending-permission.json  session-create.json  session-gated.json
fixtures/opencode/events/: gated-global.sse  gated.sse  plain.sse
src/: admin.rs  auth.rs  config.rs  lib.rs  main.rs  outbox.rs  pairing.rs  permission.rs  persistence.rs  session.rs  state.rs
src/mcp/: mod.rs  store.rs
src/opencode/: client.rs  events.rs  health.rs  mod.rs  supervisor.rs  types.rs
src/telegram/: bot.rs  files.rs  markdown.rs  mod.rs  render.rs  retry.rs  stream.rs
tests/: README.md  admin.rs  events.rs  harness.rs  mcp.rs  session_probe.rs  streaming.rs
tests/support/: mock_opencode.rs  mock_telegram.rs  mod.rs
