[package]
name = "telegram-opencode-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
notify = "8.2.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
# In-process mock HTTP servers for the hermetic test harness (issue #24). axum
# is a TEST-ONLY dependency (mock_opencode / mock_telegram under tests/support,
# plus the Layer-2 `examples/mock_model.rs`); the production binary never links
# it. axum's SSE support backs the mock opencode `/global/event` stub.
#
# NOTE: the Layer-2 mock model lives in `examples/` (not `src/bin/`) precisely
# because only examples/tests/benches may use dev-dependencies — a `src/bin/`
# target is part of the shipped package and could not reach axum.
axum = "0.8"
# The integration test crate is a *separate* crate: it can name the library and
# its dev-dependencies, but NOT the library's normal deps. teloxide (to build a
# `Bot`/`Message` for the handlers) and serde_json (mock bodies + fixtures) are
# therefore repeated here. Same versions as `[dependencies]`, so Cargo unifies
# them and nothing is compiled twice.
teloxide = { version = "0.17.0", features = ["macros"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
# Temp DB files for persistence reopen tests (src/persistence.rs). Already in
# the lockfile transitively, so this direct edge reuses the pinned version.
tempfile = "3"
